--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<!-- Enter a description for the repository -->",
   "main": "index.js",
   "scripts": {
-    "start": "node inquirer/index.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Untapped-Island/inquirer#readme",
   "dependencies": {
+    "@inquirer/checkbox": "^0.0.30-alpha.0",
+    "axios": "^1.1.3",
     "commander": "^9.4.1",
     "inquirer": "^8.2.4"
   }
