--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@inquirer/checkbox": "^0.0.30-alpha.0",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "inquirer": "^8.2.4"
-  },
-  "devDependencies": {}
+  }
 }
